--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,8 @@
 	<description>Maven Web Project for Java Project</description>
 
 	<organization>
-		<name>P2pro  Technologies</name>
-		<url>http://p2protech.com/</url>
+		<name>Anand</name>
+		<url>http://google.com/</url>
 	</organization>
 
 	<properties>
@@ -97,14 +97,14 @@
 
 	    <repository>
 	      <id>nexus</id>
-	      <name>P2pro Technologies Releases Nexus Repository</name>
-	      <url>http://54.255.174.111:8081/repository/flipkart-release/</url>
+	      <name>Releases Nexus Repository</name>
+	      <url>http://54.175.42.151:8081/repository/flipkart-release/</url>
 	    </repository>
 
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>P2pro Technologies Snapshot Nexus Repository </name>
-	      <url>http://54.255.174.111:8081/repository/flipkart-snapshot/</url>
+	      <name>Snapshot Nexus Repository </name>
+	      <url>http://54.175.42.151:8081/repository/flipkart-snapshot/</url>
 	    </snapshotRepository>
 
 	</distributionManagement>
